cluster/apps/operators/postgresql/svc-ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgo
  namespace: operators
spec:
  ports:
    - name: https
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    postgres-operator.crunchydata.com/control-plane: postgres-operator
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgo
  namespace: operators
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "traefik.${SECRET_DOMAIN_CASA}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "pgo.local.${SECRET_DOMAIN_CASA}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgo
                port:
                  number: 8080
  tls:
    - hosts:
        - "pgo.local.${SECRET_DOMAIN_CASA}"
